Session-5/Kubernetes-Resources/deployment-k8s-intro.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: k8s-intro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      containers:
        - name: nginx
          image: 'nginx:latest'
          ports:
            - containerPort: 80
              protocol: TCP
