Session-5/Kubernetes-Resources/network-policy-test-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-nginx-access
  namespace: k8s-intro
spec:
  podSelector:
    matchLabels:
      app: nginx-blue
  egress:
    - ports:
        - protocol: TCP
          port: 80
      to:
        - podSelector:
            matchLabels:
              app: nginx-red
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: test-np
  policyTypes:
    - Egress
